Support pending review status available in WordPress 2.3
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@31717 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -1,6 +1,18 @@
 FeedWordPress Change Log
 ========================
 
+Changes from 0.992 to 0.993
+---------------------------
+*	SYNDICATED POSTS CAN BE MARKED AS "PENDING REVIEW": WordPress 2.3 users
+	can now take advantage of WordPress's new "Pending Review" features for
+	incoming syndicated posts. Posts marked as "Pending Review" are not
+	published immediately, but are marked as ready to be reviewed by an
+	Administrator or Editor, who can then choose to publish the post or
+	hold it back. If you want to review syndicated posts from a particular
+	feed, or from all feeds, before they are posted, then use
+	Syndication --> Syndicated Sites --> Edit or Syndication --> Options to
+	change the settings for handling new posts.
+
 Changes from 0.991 to 0.992
 ---------------------------
 *	AUTHOR RE-MAPPING: FeedWordPress now offers considerable control over
