Bugfix: fix inconsistent pluralization issues with unfamiliar categories/category. Props Dirk Meister.
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@41476 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -15,7 +15,7 @@ Changes from 0.992 to 0.993
 	change the settings for handling new posts.
 
 *	AWARE OF NEW URI FOR del.icio.us FEEDS: Previous releases of
-	FeedWordPress a;ready  automatically split del.icio.us tags up
+	FeedWordPress already automatically split del.icio.us tags up
 	appropriately appropriately when generating categories. (del.icio.us
 	feeds smoosh all the tags into a single `<dc:subject>` element,
 	separated by spaces; FeedWordPress un-smooshes them into multiple
