--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -4,7 +4,7 @@ FeedWordPress Change Log
 Changes from 0.992 to 0.993
 ---------------------------
 
-*	WORDPRESS 2.5.1 COMPATABILITY: FeedWordPress should now be compatible
+*	WORDPRESS 2.5.1 COMPATIBILITY: FeedWordPress should now be compatible
 	with WordPress 2.5.1.
 
 *	WORDPRESS 2.5 INTERFACE IMPROVEMENTS: FeedWordPress's Dashboard
