UI: bringing things up to speed with WordPress 2.7.
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@79579 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -1,6 +1,9 @@
 FeedWordPress Change Log
 ========================
 
+Changes from 2008.1105 to 2008.1212
+-----------------------------------
+
 Changes from 2008.1101 to 2008.1105
 -----------------------------------
 
